autofocus directive added

--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -21,3 +21,4 @@ script(type="text/javascript" src="/app/account/services/identity.js")
 script(type="text/javascript" src="/app/account/services/usersResource.js")
 
 script(type="text/javascript" src="app/common/notifier.js")
+script(type="text/javascript" src="app/common/directives/autofocus.js")
