--- a/public/app/account/signup.jade
+++ b/public/app/account/signup.jade
@@ -6,26 +6,15 @@
                     | Please Sign Up
                     small It's free and always will be.
                 hr
+                .form-group
+                    input.form-control.input-lg(type='text', ng-model='user.username', placeholder='Username' required="", tabindex='1' autofocus)
                 .row
                     .col-xs-6.col-sm-6.col-md-6
                         .form-group
-                            input.form-control.input-lg(type='text', ng-model='user.firstName', placeholder='First Name', required="", tabindex='1')
+                            input.form-control.input-lg(type='password', ng-model="user.password" ng-minlength="4" ng-maxlength="20" required="", placeholder='Password', tabindex='2')
                     .col-xs-6.col-sm-6.col-md-6
                         .form-group
-                            input.form-control.input-lg(type='text', ng-model='user.lastName', placeholder='Last Name', required="", tabindex='2')
-                .form-group
-                    input.form-control.input-lg(type='text', ng-model='user.username', placeholder='Username' required="", tabindex='3')
-                .form-group
-                    input.form-control.input-lg(type='text', ng-model="user.city", placeholder='City', tabindex='4', required="")
-                .form-group
-                    input.form-control.input-lg(type='text', ng-model="user.phone", placeholder='(+359) 888 888 888', tabindex='5', required="")
-                .row
-                    .col-xs-6.col-sm-6.col-md-6
-                        .form-group
-                            input.form-control.input-lg(type='password', ng-model="user.password" ng-minlength="4" ng-maxlength="20" required="", placeholder='Password', tabindex='6')
-                    .col-xs-6.col-sm-6.col-md-6
-                        .form-group
-                            input.form-control.input-lg(type='password', ng-model="user.confirmPassword" ng-minlength="4" ng-maxlength="20" required="", placeholder='Confirm Password', tabindex='7')
+                            input.form-control.input-lg(type='password', ng-model="user.confirmPassword" ng-minlength="4" ng-maxlength="20" required="", placeholder='Confirm Password', tabindex='3')
                 .row
                     .col-xs-3.col-sm-3.col-md-3
 
@@ -38,6 +27,6 @@
                 hr
                 .row
                     .col-xs-6.col-md-6
-                        button.btn.btn-primary.btn-block.btn-lg(ng-click="signup(user, singUpForm)") Register
+                        button.btn.btn-primary.btn-block.btn-lg(ng-click="signup(user, singUpForm)" tabindex="4") Register
                     .col-xs-6.col-md-6
                         a.btn.btn-success.btn-block.btn-lg(href='#/login') Sign In
