profile update page

--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -19,6 +19,8 @@ script(type="text/javascript" src="/app/account/directives/authBar.js")
 script(type="text/javascript" src="/app/account/services/auth.js")
 script(type="text/javascript" src="/app/account/services/identity.js")
 script(type="text/javascript" src="/app/account/services/usersResource.js")
+script(type="text/javascript" src="/app/account/services/usersData.js")
 
 script(type="text/javascript" src="app/common/notifier.js")
 script(type="text/javascript" src="app/common/directives/autofocus.js")
+script(type="text/javascript" src="app/common/directives/fileModel.js")
