--- a/public/app/account/profile.jade
+++ b/public/app/account/profile.jade
@@ -5,27 +5,11 @@
             .col-md-4.col-sm-6.col-xs-12
                 .text-center
                     // TODO: fix avatar url
-                    img.avatar.img-thumbnail(ng-src='images/{{ user.imageUrl }}', alt='avatar')
+                    img.avatar.img-thumbnail(ng-src='images/{{ user.avatarUrl }}', alt='avatar')
                     h6 Upload a different photo...
                     input.text-center.center-block.well.well-sm(type="file" file-model="user.image" accept="image/*")
             .col-md-8.col-sm-6.col-xs-12.personal-info
                 h3 Personal info
-                .form-group
-                    label.col-lg-3.control-label First name:
-                    .col-lg-8
-                        input.form-control(ng-model='user.firstName', type='text', required)
-                .form-group
-                    label.col-lg-3.control-label Last name:
-                    .col-lg-8
-                        input.form-control(ng-model='user.lastName', type='text', required)
-                .form-group
-                    label.col-lg-3.control-label City:
-                    .col-lg-8
-                        input.form-control(ng-model='user.city', type='text')
-                .form-group
-                    label.col-lg-3.control-label Phone:
-                    .col-lg-8
-                        input.form-control(ng-model='user.phone', type='text')
                 .form-group
                     label.col-md-3.control-label Username:
                     .col-md-8
@@ -41,6 +25,6 @@
                 .form-group
                     label.col-md-3.control-label
                     .col-md-8
-                        button.btn.btn-primary(ng-click="submit(user)", ng-disabled="updateUserForm.$invalid") Update
+                        button.btn.btn-primary(ng-click="update(user)", ng-disabled="updateUserForm.$invalid") Update
                         span
                         a.btn.btn-default(href='#/', type='reset') Cancel
