--- a/public/app/account/signup.jade
+++ b/public/app/account/signup.jade
@@ -1,32 +1,13 @@
-.container
-    .row
-        .col-xs-12.col-sm-8.col-md-6.col-sm-offset-2.col-md-offset-3.well
-            form(name='singUpForm')
-                h2
-                    | Please Sign Up
-                    small It's free and always will be.
-                hr
-                .form-group
-                    input.form-control.input-lg(type='text', ng-model='user.username', placeholder='Username' required="", tabindex='1' autofocus)
-                .row
-                    .col-xs-6.col-sm-6.col-md-6
-                        .form-group
-                            input.form-control.input-lg(type='password', ng-model="user.password" ng-minlength="4" ng-maxlength="20" required="", placeholder='Password', tabindex='2')
-                    .col-xs-6.col-sm-6.col-md-6
-                        .form-group
-                            input.form-control.input-lg(type='password', ng-model="user.confirmPassword" ng-minlength="4" ng-maxlength="20" required="", placeholder='Confirm Password', tabindex='3')
-                .row
-                    .col-xs-3.col-sm-3.col-md-3
-
-                    .col-xs-9.col-sm-9.col-md-9
-                        | By clicking
-                        strong.label.label-primary Register
-                        | , you agree to the
-                        a(href='') Terms and Conditions
-                        | set out by this site, including our Cookie Use.
-                hr
-                .row
-                    .col-xs-6.col-md-6
-                        button.btn.btn-primary.btn-block.btn-lg(ng-click="signup(user, singUpForm)" tabindex="4") Register
-                    .col-xs-6.col-md-6
-                        a.btn.btn-success.btn-block.btn-lg(href='#/login') Sign In
+form#auth-form(ng-controller="SignUpCtrl", name="signUpForm")
+    fieldset
+        legend Регистрирване
+        div
+            input(type='text', placeholder='Потребител', ng-model="user.username", required="required")
+        div
+            input(type='email', placeholder='Емайл', ng-model="user.email")
+        div
+            input(type='password', placeholder='Парола', ng-model="user.password", ng-minlength="4", ng-maxlength="20", required="required")
+        div
+            input(type='password', placeholder='Я повтори пак', ng-model="user.confirmPassword", ng-minlength="4", ng-maxlength="20", required="required")
+        div
+            button(type='submit', ng-click='signup(user, signUpForm)') Регистрирвай се
