--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,20 +1,11 @@
 extends includes/layout
 block main-content
-    header.nav.navbar-inverse.navbar-fixed-top
-        .container
-            .navbar-header
-                button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-responsive-collapse')
-                    span.icon-bar
-                    span.icon-bar
-                    span.icon-bar
-                a.navbar-brand(href="#/") NewsFeed
-            .navbar-collapse.collapse.navbar-responsive-collapse
-                div(auth-bar)
-    section
+    div(header)
+    section#main
         div(ng-view)
-    footer.panel-footer
-        p.text-center.text-primary
-            | &copy; &nbsp;
-            span
-                a(href="https://github.com/StefanSinapov/NewsFeed")
-                    | Open Source Project
+    footer#footer
+        p 2015 &copy; Баси Големеа Фийд Чуек
+        p.small Проект на Стефан Синапов и Георги Серев
+        p.small Основи на NoSQL базите от данни с MongoDB 2014/2015
+        p
+            a(href='https://github.com/StefanSinapov/Newsfeed', target='_blank') GitHub Repo
