--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -24,3 +24,4 @@ script(type="text/javascript" src="/app/account/services/usersData.js")
 script(type="text/javascript" src="app/common/notifier.js")
 script(type="text/javascript" src="app/common/directives/autofocus.js")
 script(type="text/javascript" src="app/common/directives/fileModel.js")
+script(type="text/javascript" src="app/common/services/globals.js")
