--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -15,6 +15,7 @@ script(type="text/javascript" src="/app/account/controllers/LoginCtrl.js")
 script(type="text/javascript" src="/app/account/controllers/ProfileCtrl.js")
 script(type="text/javascript" src="/app/account/controllers/SignUpCtrl.js")
 script(type="text/javascript" src="/app/account/directives/header.js")
+script(type="text/javascript" src="/app/account/directives/avatarUpload.js")
 script(type="text/javascript" src="/app/account/directives/loginForm.js")
 script(type="text/javascript" src="/app/account/services/auth.js")
 script(type="text/javascript" src="/app/account/services/identity.js")
