--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -7,7 +7,6 @@ script(type="text/javascript" src="/lib/angular-route/angular-route.js")
 //script(type="text/javascript" src="https://cdn.socket.io/socket.io-1.1.0.js")
 //script(type="text/javascript" src="/lib/socket.io/socket.io-1.1.0.js")
 
-
 script(type="text/javascript" src="/app/app.js")
 script(type="text/javascript" src="/app/main/controllers/mainCtrl.js")
 
@@ -21,6 +20,8 @@ script(type="text/javascript" src="/app/account/services/auth.js")
 script(type="text/javascript" src="/app/account/services/identity.js")
 script(type="text/javascript" src="/app/account/services/usersResource.js")
 script(type="text/javascript" src="/app/account/services/usersData.js")
+
+script(type="text/javascript" src="/app/account/members/MembersCtrl.js")
 
 script(type="text/javascript" src="app/common/notifier.js")
 script(type="text/javascript" src="app/common/directives/autofocus.js")
