--- a/public/app/account/editProfile.jade
+++ b/public/app/account/editProfile.jade
@@ -17,6 +17,10 @@ form#general-info.left(name="updateUserForm")
         label.title(for="pass") Нове парола
         input#pass.editable(type="password", ng-model="user.password")
     p
+        label.title(for="rep-pass") Повтори парола
+        input#rep-pass.editable(type="password", ng-model="user.repeatPassword")
+    hr
+    p
         label.title(for="confirm-pass") Парола за потвърждаане
             strong *
         input#confirm-pass.editable(type="password", ng-model="user.confirmPassword", required="required")
