--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,7 +120,7 @@ input, textarea, button {
     transition: 0.3s ease;
 }
 
-input:invalid {
+input:invalid, textarea:invalid {
     box-shadow: none;
 }
 
