sockets module added

--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -5,7 +5,7 @@ script(type="text/javascript" src="/lib/angular-resource/angular-resource.js")
 script(type="text/javascript" src="/lib/angular-route/angular-route.js")
 
 //script(type="text/javascript" src="https://cdn.socket.io/socket.io-1.1.0.js")
-//script(type="text/javascript" src="/lib/socket.io/socket.io-1.1.0.js")
+script(type="text/javascript" src="/lib/socket.io-client/socket.io.js")
 
 script(type="text/javascript" src="/app/app.js")
 script(type="text/javascript" src="/app/main/controllers/mainCtrl.js")
@@ -29,3 +29,4 @@ script(type="text/javascript" src="app/common/notifier.js")
 script(type="text/javascript" src="app/common/directives/autofocus.js")
 script(type="text/javascript" src="app/common/directives/fileModel.js")
 script(type="text/javascript" src="app/common/services/globals.js")
+script(type="text/javascript" src="app/common/services/sockets.js")
