Added member details page

--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -25,8 +25,11 @@ script(type="text/javascript" src="/app/account/services/usersResource.js")
 script(type="text/javascript" src="/app/account/services/usersData.js")
 
 script(type="text/javascript" src="/app/members/controllers/MembersCtrl.js")
+script(type="text/javascript" src="/app/members/controllers/MemberDetailsCtrl.js")
+script(type="text/javascript" src="/app/members/services/membersResource.js")
 
 script(type="text/javascript" src="app/common/notifier.js")
 script(type="text/javascript" src="app/common/directives/autofocus.js")
 script(type="text/javascript" src="app/common/directives/fileModel.js")
+script(type="text/javascript" src="app/common/directives/userDetails.js")
 script(type="text/javascript" src="app/common/services/globals.js")
