--- a/public/app/feed/feed.jade
+++ b/public/app/feed/feed.jade
@@ -23,7 +23,7 @@ div
             .usr-info
                 img.left(src='{{ avatarImgPrefix }}{{ message.avatarUrl }}', width='35', height='35', alt='')
                 p.info
-                    a(href='') {{message.username}}
+                    a(href='#/member/{{ message.username }}') {{message.username}}
                     br
                     span.small 123 поста
                     span.small 15 рейт
