Fixed a small bug with scripts.jade

--- a/server/views/includes/scripts.jade
+++ b/server/views/includes/scripts.jade
@@ -31,6 +31,6 @@ script(type="text/javascript" src="/app/members/services/membersResource.js")
 script(type="text/javascript" src="app/common/notifier.js")
 script(type="text/javascript" src="app/common/directives/autofocus.js")
 script(type="text/javascript" src="app/common/directives/fileModel.js")
-
 script(type="text/javascript" src="app/common/directives/userDetails.js")
+script(type="text/javascript" src="app/common/services/globals.js")
 script(type="text/javascript" src="app/common/services/sockets.js")
