--- a/public/app/members/members.jade
+++ b/public/app/members/members.jade
@@ -10,7 +10,7 @@ div(ng-repeat="member in members")
     .user-thumb
         img(src='{{ avatarImgPrefix }}{{ member.avatarUrl }}', width='40', height='40', alt='')
         br
-        a(href='') {{member.username}}
+        a(href='#/member/{{ member.username }}') {{member.username}}
         br
         span.small {{member.stats.rating | number:2 }} рейт
         br
