--- a/server/views/includes/layout.jade
+++ b/server/views/includes/layout.jade
@@ -10,7 +10,7 @@ html
 
     body(ng-app="app")
         div#sky
-        div#wrapper
+        div#wrapper(ng-cloak)
             block main-content
 
         include scripts
